sass/style.scss
@import "compass";
@import url(https://fonts.googleapis.com/css?family=Roboto);

@import "colors";
@import "slider";

@mixin ellipsis() {
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

html, body, nav {
    width: 100%;
}
html, body {
    height: 100%;
    margin: 0;
}
body {
    background-color: $background-color;
    color: $text-color;
    font-family: Roboto;
}
a {
    text-decoration: none;
}
header {
    position: fixed;
    top: 0;
    right: 0;
    width: 100%;
    height: 60px;
    @include transition(width 0.5s);
    @include box-sizing(border-box);
    @include box-shadow(0 0 2px 2px black);
    background-color: nth($colors, 1);
    z-index: 400;

    h1 {
        padding: 0;
        margin: 0;
        text-align: left;
        line-height: 60px;
        font-size: 2em;
        font-weight: normal;
        padding-left: 60px;
        color: $white;
        @include ellipsis();
    }
}
nav {
    .menu h2 {
        display: block;
        width: 100%;
        text-align: center;
        font-size: 2em;
        line-height: 60px;
        color: $heading-text-color;
        margin: 0;
        padding: 0;
        opacity: 0;
        @include transition(all 0.2s ease-out);
        a {
            display: block;
            width: 100%;
            color: inherit;
            outline: 0;
            @include ellipsis();
        }
    }
    .menu {
        position: fixed;
        top: 0px;
        left: -100%;
        width: 100%;
        height: 100%;
        background-color: $menu-background-color;
        @include transition(all 0.5s);
        @include box-shadow(0 0 0 black);
        z-index: 450;
    }
    .menubtn {
        display: block;
        position: fixed;
        cursor: pointer;
        top: 0;
        left: 0;
        width: 35px;
        height: 60px;
        padding: 0 10px;
        @include transition(all 0.5s);
        @include user-select(none);
        z-index: 425;
    }
    .hamburger, .hamburger:before, .hamburger:after {
        display: block;
        position: fixed;
        top: 29px;
        left: 10px;
        content: '';
        height: 3px;
        width: 35px;
        border-radius: 2px;
        background-color: black;
        z-index: 400;
        pointer-events: none;
        @include transition(all 0.5s);
    }
    .hamburger:before {
        position: absolute;
        top: -10px;
        left: 0;
    }
    .hamburger:after {
        position: absolute;
        top: 10px;
        left: 0;
    }
    .menubtn:target ~ .menu h2 {
        opacity: 1;
        @include transition(all 0.5s cubic-bezier(1,.01,1,.01));
    }
    .menubtn:target ~ .hamburger:before {
        background-color: $heading-text-color;
        @include transform(rotate(45deg));
        width: 25px;
        left: 14px;
        top: -8px;
    }
    .menubtn:target ~ .hamburger {
        @include transform(rotate(180deg));
        z-index: 500;
        background-color: $heading-text-color;
    }
    .menubtn:target ~ .hamburger:after {
        background-color: $heading-text-color;
        @include transform(rotate(-45deg));
        width: 25px;
        left: 14px;
        top: 8px;
    }
    .menubtn:target ~ .menu {
        left: 0;
        @include box-shadow(0 0 5px 0 black);
    }
    .menu ul {
        position: relative;
        top: 50%;
        @include transform(translateY(-50%) translateY(-30px));
        list-style: none;
        font-size: 1em;
        width: 92%;
        margin: 0;
        padding: 10px 0;
        margin: 0 4%;
        border-top: 2px black solid;
        border-bottom: 2px black solid;
    }
    .menu ul li {
        width: 100%;
        text-align: center;
        margin: 10px 0;
        @include ellipsis();
    }
    .menu ul li a {
        color: $menu-item-text-color;
        text-decoration: none;
        @include transition(all 0.2s);
    }
    .menu ul li a:hover {
        color: $menu-item-hover-text-color;
    }
    @media (orientation: landscape) {
        .menu {
            width: 50%;
            left: -50%;
        }
    }
    @media (orientation: landscape) and (min-width: 600px) {
        .menu {
            width: 200px;
            left: 0;
        }
        .menu h2 {
            opacity: 1;
            pointer-events: none;
        }
        .hamburger {
            display: none;
        }
        .menubtn {
            display: none;
        }
    }
}
@media (orientation: landscape) and (min-width: 600px) {
    header {
        width: calc(100% - 200px);
    }
}
$headings-count: 5;
.wrapper {
    padding-top: 60px;
    width: 100%;
    float: right;
    @include transition(width 0.5s);

    h2 {
        display: block;
        position: sticky;
        position: -webkit-sticky;
        margin: 0;
        left: 0;
        padding: 40px 5px;
        @include box-shadow(0 0 2px 2px black);
        text-align: center;
        font-size: 3em;
        text-overflow: ellipsis;
        white-space: nowrap;
        overflow: hidden;
        @include transition(all 0.5s);
    }
    h2, h3 {
        color: $heading-text-color;
    }
    /* Very tricky way to position the section under the header when clicking on a link */
    section .content:before {
        content: ' ';
        display: block;
        visibility: hidden;
        height: 216px;
        margin-top: -216px;
    }

    /* Currently, Firefox and Safari are the only browser supporting position: sticky, so only specify this special offset for these */
    @mixin topOffset() {
        @for $i from 1 through $headings-count {
            a:nth-of-type(#{$i}) {
                h2 {
                    background-color: nth($colors, $i + 1);
                    top: -79px + ($i * 12px);
                    z-index: 400 - ($i * 10);
                    &:hover {
                        top: 47px + ($i * 12px);
                    }
                }

                + section .content:before {
                    height: 204px + ($i * 12px);
                    margin-top: -204px - ($i * 12px);
                }
            }
        }

    }
    /* Firefox only */
    @-moz-document url-prefix() {
        @include topOffset();
    }
    /* Safari only */
    _::-webkit-full-page-media, _:future, :root {
        @include topOffset();
    }

    @for $i from 1 through $headings-count {
            a:nth-of-type(#{$i}) h2 {
                background-color: nth($colors, $i + 1);
            }
        }
    section {
        padding: 20px 30px;
        font-size: 1.5em;
        text-align: center;
    }
    @media (orientation: landscape) {
        section {
            padding: 20px 15%;
        }
    }
    section div {
        margin: 0 auto;
    }
    section a {
        color: $link-text-color;
        @include transition(all 0.5s);
    }
    section a:hover {
        color: $link-hover-text-color;
    }
    a:last-of-type + section .content {
        padding-bottom: 100px;
        min-height: 100vh;
    }

    ul {
        text-align: left;
    }
}
@media (orientation: landscape) and (min-width: 600px) {
    .wrapper {
        width: calc(100% - 200px);
    }
}
footer {
    position: fixed;
    bottom: 0;
    right: 0;
    padding: 5px;
    width: 400px;
    @include box-shadow(0 0 2px 2px black);
    @include transition(width 0.5s);
    background-color: rgba(255,255,255,0.7);
    z-index: 600;
    color: $footer-text-color;
    font-size: .8em;
    text-align: center;
}
@media (orientation: portrait) {
    footer {
        width: 100%;
    }
}

